# HeapOptimizer

./: CMakeLists.txt  INFORME.md  README.md  conanfile.txt
include/: utils.h
lib/memory/include/: memory.h
lib/memory/src/: memory.c
src/: main.c
tests/: CMakeLists.txt
tests/unit/: test_memory.c
